--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook",
+  "name": "image-finder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://neprotod.github.io/goit-react-hw-02-phonebook",
+  "homepage": "https://neprotod.github.io/goit-react-hw-03-image-finder",
   "eslintConfig": {
     "extends": "react-app"
   },
