--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://neprotod.github.io/goit-react-hw-03-image-finder",
+  "homepage": "",
   "eslintConfig": {
     "extends": "react-app"
   },
